[Bug 901656] nsIRadioGroupContainer can use HTMLInputElement r=Ms2ger